# python-weeks-html

./: .env.example  .gitignore  README.md  broken_append.py  broken_dq_assert.py  broken_env.py  broken_merge.py  broken_ml_leakage.py  broken_pandas_read.py  broken_plot_dates.py  broken_sqlite_commit.py  broken_units.py  docker-compose.airflow.yml  docker-compose.yml  pyproject.toml  requirements.txt
airflow/dags/: broken_dag.py  demo_fixed_dag.py  etl_variant_03.py
configs/: variant_03.yml
data/: dq_report.json  state.json
data/mart/variant_03/: mart_daily_2026-06-18_15-54-23.csv  mart_daily_2026-06-18_15-55-14.csv
docs/: Data_Contract.md  Implementation_Plan.md  LLM_Rules.md  LLM_Usage_Log.md  data_dictionary.md  dq.md  sql_checks.md
docs/airflow/: README.md
docs/bi/: README.md
docs/llm/: summary.md
docs/ml/: anomalies_top.csv  week13_summary.md
notebooks/: week13_ml.ipynb  week3_eda.ipynb  week7_viz.ipynb
scripts/: clear_github_credentials.bat  connect_github.bat  fix_wsl_docker.bat  fix_wsl_docker.ps1  generate_bi_screenshots.py  generate_week13_ml.py  generate_week7_figures.py  install_tools.ps1  open_github_token_page.bat  pipeline.bat  run_airflow.bat  run_dq.bat  run_extract.bat  run_llm_summary.bat  run_load.bat  run_mart.bat  run_normalize.bat  run_pipeline.bat  run_postgres.bat  run_week7_figures.bat  setup_env.bat  setup_git.bat
src/sem2_de/: __init__.py  cli.py  config.py  dq.py  extract.py  llm_summary.py  load.py  mart.py  normalize.py  pipeline.py  state.py  transform.py
tests/: test_dq.py  test_normalize.py
(+6 files in other folders)
