[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sem2-de"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "requests>=2.31",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["sem2_de*"]
